--- a/assets/css/skin-red.css
+++ b/assets/css/skin-red.css
@@ -1,46 +1,46 @@
-.colortext {	color:#f54828;}
-.colorbg {background:#f54828;}
-a {	color:#f54828;}
-::selection{background:#f54828;}
-.navbar-nav>li.active>a,.navbar-nav>li.active>a:hover,.navbar-nav>li.active>a:focus {background-color:#f54828;}
-.navbar-nav>li.active>a:before,.navbar-nav>li>a:hover:before,.navbar-nav>li>a:focus:before,.extra-nav-class a.dropdown-toggle:before {border-bottom:6px solid #f54828;}
-.navbar-nav>li>a:hover,.navbar-nav>li>a:focus {	background-color:#f54828;}
-.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus {background-color:#f54828 !Important;}
-.extra-nav-class a.dropdown-toggle {	background-color:#f54828 !Important;}
-.car-highlight1 {background-color:#f54828;}
-.car-smallcircle {background:#f54828;}
-.carouselText2 {	background:#f54828;}
-.icon-box-top i:hover {background-color:#f54828;}
-.fontawesome-icon.circle-white {	color:#f54828;}
-.grey-box-icon:hover .fontawesome-icon.circle-white,.grey-box-icon.active .fontawesome-icon.circle-white,.active i.fontawesome-icon {background-color:#f54828;}
-.home-features .icon {background:#f54828;}
-.copyright {	background-color:#f54828;}
-.panel1 {border-left:6px solid #f54828;}
-.buttoncolor {background:#f54828;}
-.panel,.panel2 {	border-left:8px solid #f54828;}
-.btn-default {background-color:#f54828;}
-.btn-minimal:hover {	color: #f54828;}
-#accordion div h4:before {	background:#f54828 url('../img/plus.png') center center no-repeat;}
-#accordion div.active h4:before {background:#f54828 url('../img/minus.png') center center no-repeat;}
-.sidebar h4 {color:#f54828;}
-.nav-tabs>.active>a,.nav-tabs>.active>a:hover {color: #f54828 !important;}
-blockquote {border-left:5px solid #f54828;}
-#skill i {background:#f54828;}
-.service-fancybox:hover i {color:#f54828;}
-.service-fancybox:hover {background:#f54828;}
-.service-fancybox.featured {	background:#f54828;}
-.service-fancybox.featured .circleicon i {color:#f54828;}
-.service-fancybox.black .circleicon i {color:#f54828;}
-.cbp_tmtimeline>li .cbp_tmicon {background:#f54828;}
-.services i {	color:#f54828;}
-.pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus {background-color:#f54828;	border-color:#f54828;}
-.landingpage-button {color:#f54828;}
-.landingpage-button {color:#f54828;}
-.landingpage-button span {color:#f54828;}
-.landingpage-button strong {color:#f54828;}
-.landingpage-button i {color:#f54828;}
-.active-header {	background:#f54828;}
-.active-header:hover {background:#f54828;}
-#filter ul li .selected {background: #f54828 !Important;}
-.drop-cap, .captionicons {background:#f54828;}
+.colortext {	color:#3CF;}
+.colorbg {background:#3CF;}
+a {	color:#3CF;}
+::selection{background:#3CF;}
+.navbar-nav>li.active>a,.navbar-nav>li.active>a:hover,.navbar-nav>li.active>a:focus {background-color:#3CF;}
+.navbar-nav>li.active>a:before,.navbar-nav>li>a:hover:before,.navbar-nav>li>a:focus:before,.extra-nav-class a.dropdown-toggle:before {border-bottom:6px solid ##3CF;}
+.navbar-nav>li>a:hover,.navbar-nav>li>a:focus {	background-color:#3CF;}
+.dropdown-menu>li>a:hover,.dropdown-menu>li>a:focus {background-color:##3CF !Important;}
+.extra-nav-class a.dropdown-toggle {	background-color:#3CF !Important;}
+.car-highlight1 {background-color:#3CF;}
+.car-smallcircle {background:#3CF;}
+.carouselText2 {	background:#3CF;}
+.icon-box-top i:hover {background-color:#3CF;}
+.fontawesome-icon.circle-white {	color:#3CF;}
+.grey-box-icon:hover .fontawesome-icon.circle-white,.grey-box-icon.active .fontawesome-icon.circle-white,.active i.fontawesome-icon {background-color:#3CF;}
+.home-features .icon {background:#3CF;}
+.copyright {	background-color:#3CF;}
+.panel1 {border-left:6px solid #3CF;}
+.buttoncolor {background:#3CF;}
+.panel,.panel2 {	border-left:8px solid #3CF;}
+.btn-default {background-color:#3CF;}
+.btn-minimal:hover {	color: #3CF;}
+#accordion div h4:before {	background:#3CF url('../img/plus.png') center center no-repeat;}
+#accordion div.active h4:before {background:#3CF url('../img/minus.png') center center no-repeat;}
+.sidebar h4 {color:#3CF;}
+.nav-tabs>.active>a,.nav-tabs>.active>a:hover {color: #3CF !important;}
+blockquote {border-left:5px solid #3CF;}
+#skill i {background:#3CF;}
+.service-fancybox:hover i {color:#3CF;}
+.service-fancybox:hover {background:#3CF;}
+.service-fancybox.featured {	background:#3CF;}
+.service-fancybox.featured .circleicon i {color:#3CF;}
+.service-fancybox.black .circleicon i {color:#3CF;}
+.cbp_tmtimeline>li .cbp_tmicon {background:#3CF;}
+.services i {	color:#3CF;}
+.pagination>.active>a,.pagination>.active>span,.pagination>.active>a:hover,.pagination>.active>span:hover,.pagination>.active>a:focus,.pagination>.active>span:focus {background-color:#3CF;	border-color:#3CF;}
+.landingpage-button {color:#3CF;}
+.landingpage-button {color:#3CF;}
+.landingpage-button span {color:#3CF;}
+.landingpage-button strong {color:#3CF;}
+.landingpage-button i {color:#3CF;}
+.active-header {	background:#3CF;}
+.active-header:hover {background:#3CF;}
+#filter ul li .selected {background: #3CF !Important;}
+.drop-cap, .captionicons {background:#3CF;}
 .pageheader-default .semitransparentbg, .bgarea-semitransparent {background: rgba(245,72,40,0.80) !important;}
